# medical-agent-rag

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 6009f68a74ca_create_medical_tables.py  91ff762b51ad_create_medical_tables.py
app/: main.py
app/agents/: livekit _voice_agent.py  livekit_voice_agent.py  medical_summarizer.py  medical_transcriber.py  terminology_validator.py
app/api/: routes.py
app/core/: config.py  llm.py  logging.py
app/db/: models.py  session.py
app/models/: schemas.py
app/services/: audio_service.py  database_service.py
